REGRESSION (r276633): ASSERTION FAILED: !forbidMallocUseScopeCount || disableMallocRestrictionScopeCount https://bugs.webkit.org/show_bug.cgi?id=225374 <rdar://problem/77533237>

Reviewed by Chris Dumez.

Disable memory allocation checks in speech recognition code path.
No change of behavior.

* WebProcess/Speech/SpeechRecognitionRealtimeMediaSourceManager.cpp:
(WebKit::SpeechRecognitionRealtimeMediaSourceManager::Source::storageChanged):


Canonical link: https://commits.webkit.org/237339@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277026 268f45cc-cd09-0410-ab3c-d52691b4dbfc